<resources>

    <string name="app_name">火山引擎云游戏</string>
    <string name="start_game">开始游戏</string>
    <string name="start_phone">StartPhone</string>
    <string name="cloud_game">云游戏</string>
    <string name="cloud_phone">云手机</string>
    <string name="release">release</string>
    <string name="ak">ak</string>
    <string name="sk">sk</string>
    <string name="game_id">gameId</string>
    <string name="session_id">sessionId</string>
    <string name="round_id">roundId</string>
    <string name="clarity_id">clarityId</string>
    <string name="reserved_id">reservedId</string>
    <string name="hide_or_show">点击隐藏/显示</string>
    <string name="back_again_to_exit">连按两次退出</string>
    <string name="privacy_and_service">隐私政策与服务条款</string>
    <string name="cancel_tip">不同意并退出应用</string>
    <string name="confirm_tip">同意并继续</string>
    <string name="content">\t\t\t\t\t欢迎使用火山引擎云游戏! 我们非常重视您的个人信息和隐私保护。
                为了更好地保障您的个人权益，在您使用我们的产品前，请务必审慎阅读《隐私政策》和《服务条款》内的所有条款。
                您点击【同意并继续】的行为即表示您已阅读完毕并同意以上协议的全部内容。\n\n
                \t\t\t\t\t如您同意以上协议内容，请点击【同意并继续】开始使用我们的产品和服务!\n</string>

    <!--  音频相关  -->
    <string name="audio">音频</string>
    <string name="mute">静音</string>
    <string name="volume_up">音量+</string>
    <string name="volume_down">音量-</string>
    <string name="enable_send_audio">是否发送音频流</string>
    <string name="start_send_audio">开始发送音频</string>
    <string name="stop_send_audio">停止发送音频</string>
    <string name="local_audio_playback_volume">本地音频播放音量</string>
    <string name="remote_audio_playback_volume">云端音频播放音量</string>
    <string name="local_audio_capture_volume">本地音频采集音量</string>
    <string name="audio_playback_device">音频播放设备</string>
    <string name="headset">有线耳机</string>
    <string name="earpiece">听筒</string>
    <string name="speakerphone">扬声器</string>
    <string name="bluetooth_headset">蓝牙耳机</string>
    <string name="audio_desc">在该演示中你可以体验与音频相关的功能接口</string>

    <!--  相机相关  -->
    <string name="camera">相机</string>
    <string name="is_open_camera_mirror">是否开启相机镜像</string>
    <string name="add_local_canvas">添加本地画布</string>
    <string name="push_multiple_streams">推送多路流</string>
    <string name="switch_rear_camera">切换后置相机</string>
    <string name="switch_front_camera">切换前置相机</string>
    <string name="camera_desc">在该演示中你可以体验与相机相关的功能接口</string>

    <!--  清晰度相关  -->
    <string name="clarity">清晰度</string>
    <string name="clarity_desc">在该演示中你可以体验与清晰度相关的功能接口</string>

    <!--  剪切板相关  -->
    <string name="clipboard">剪切板</string>
    <string name="send_clipboard_data">发送剪切板模拟数据</string>
    <string name="clipboard_desc">在该演示中你可以体验与剪切板相关的功能接口</string>

    <!-- 文件通道相关 -->
    <string name="file_channel">文件通道</string>
    <string name="file_channel_desc">在该演示中你可以体验与文件通道相关的功能接口</string>

    <!-- 大文件通道相关 -->
    <string name="file_channel_ext">大文件通道</string>
    <string name="input_filepath">请输入文件路径</string>
    <string name="file_channel_ext_desc">在该演示中你可以体验与大文件通道相关的功能接口</string>

    <!-- 前后台切换相关 -->
    <string name="switch_ground">前后台切换</string>
    <string name="switch_ground_desc">在该演示中你可以体验与前后台切换相关的功能接口</string>

    <!--定位服务相关-->
    <string name="location">定位服务</string>
    <string name="enable_location_service">是否开启定位服务</string>
    <string name="location_event_listener">位置事件监听</string>
    <string name="location_service_mode">定位服务模式</string>
    <string name="auto">自动</string>
    <string name="manual">手动</string>
    <string name="request_remote_location">请求云端位置</string>
    <string name="set_remote_location">设置云端位置</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="location_desc">在该演示中你可以体验与定位相关的功能接口</string>

    <!--消息通道相关-->
    <string name="message_channel">消息通道</string>
    <string name="type_of_send_message">发送类型: </string>
    <string name="content_of_message">发送内容(上限60K)</string>
    <string name="dst_channel_uid">目标消息通道ID（使用,隔开）</string>
    <string name="need_ack">是否需要ACK回执</string>
    <string name="period_pressure_test">1秒压测轮询周期/ms</string>
    <string name="timeout">超时时长/ms</string>
    <string name="send_message">发送</string>
    <string-array name="send_message_type">
        <item>请选择发送消息类型</item>
        <item>ACK</item>
        <item>Timeout</item>
        <item>ACK_MultiChannel</item>
        <item>Timeout_MultiChannel</item>
    </string-array>
    <string name="ack_msg">回执消息</string>
    <string name="uid_ack_msg">回执消息\n(指定用户)</string>
    <string name="timeout_msg">超时消息</string>
    <string name="uid_timeout_msg">超时消息\n(指定用户)</string>
    <string name="message_channel_desc">在该演示中你可以体验与消息通道相关的功能接口</string>

    <!--游戏手柄相关-->
    <string name="game_pad">游戏手柄</string>
    <string name="init_game_pad">初始化手柄</string>
    <string name="show_game_pad">显示手柄</string>
    <string name="hide_game_pad">隐藏手柄</string>
    <string name="release_game_pad">销毁手柄</string>
    <string name="game_pad_desc">在该演示中你可以体验与游戏手柄相关的功能接口</string>

    <!--IO设备相关-->
    <string name="io_device">IO设备</string>
    <string name="send_keyboard_event">发送键盘事件</string>
    <string name="io_device_desc">在该演示中你可以体验与IO设备相关的功能接口</string>

    <!--实例控制相关-->
    <string name="pod_control">实例控制</string>
    <string name="hint_idle_time">保活时长/秒</string>
    <string name="set_idle_time">设置保活时长</string>
    <string name="hint_auto_recycle_time">无操作回收时长/秒</string>
    <string name="set_auto_recycle_time">设置无操作回收时长</string>
    <string name="get_auto_recycle_time">查询无操作回收时长</string>
    <string name="set_keep_alive_time">设置实例保活时间3min</string>
    <string name="switch_background">切后台</string>
    <string name="switch_foreground">切前台</string>
    <string name="get_user_profile">查询配置文件路径</string>
    <string name="set_user_profile">设置配置文件路径</string>
    <string name="switch_afk_mode">挂机模式</string>
    <string name="switch_normal_mode">正常模式</string>
    <string name="pod_control_desc">在该演示中你可以体验与实例控制相关的功能接口</string>

    <!-- 场景相关 -->
    <string name="cs_demo">类CS游戏交互场景</string>
    <string name="cs_demo_desc">在该演示中你可以通过陀螺仪及轮盘，来与类CS的PC端游戏进行交互</string>
    <string name="cs_demo_2">类CS游戏交互场景2</string>
    <string name="cs_demo_desc_2">在该演示中你可以通过外部触摸监听器，来与类CS的PC端游戏进行交互</string>

    <!--  旋转相关  -->
    <string name="roll_orientation">旋转</string>

    <!--  传感器相关  -->
    <string name="sensor">传感器</string>
    <string name="magnetic">磁力</string>
    <string name="accelerator">加速度</string>
    <string name="gravity">重力</string>
    <string name="orientation">方向</string>
    <string name="gyroscope">陀螺仪</string>
    <string name="vibrator">振动</string>
    <string name="sensor_desc">在该演示中你可以体验与传感器相关的功能接口</string>

    <!--  其他  -->
    <string name="unclassified">其他</string>
    <string name="restart">重启云游戏</string>
    <string name="stop">关闭云游戏</string>
    <string name="pause">暂停拉流</string>
    <string name="resume">恢复拉流</string>
    <string name="back">返回</string>
    <string name="test_exception">异常测试</string>
    <string name="unclassified_desc">在该演示中你可以体验其他的功能接口</string>

    <!--  网络探测相关  -->
    <string name="probe_network">网络探测</string>
    <string name="probe_network_desc">在该演示中你可以体验与网络探测相关的功能接口</string>

    <!--  本地输入相关  -->
    <string name="local_input">本地输入</string>
    <string name="local_input_desc">在该演示中你可以体验与本地输入相关的功能接口</string>

    <!--  多用户相关  -->
    <string name="multi_user">多用户</string>
    <string name="player">player</string>
    <string name="viewer">viewer</string>
    <string name="player_user_id">需要改变的用户id</string>
    <string name="update_role">更新当前角色</string>
    <string name="get_current_role">获取当前角色</string>
    <string name="multi_user_desc">在该演示中你可以体验与多用户相关的功能接口</string>

    <string name="official_website">火山官网</string>
    <string name="official_website_url">https://www.volcengine.com/docs/6512/75577</string>
    <string name="first_open_app">firstOpenApp</string>
    <string name="min_speed_seek_tip">陀螺仪敏感度(越大越快):1</string>
    <string name="max_speed_seek_tip">50</string>
    <string name="jump_tip">跳跃</string>
    <string name="replace_bullet_tip">换弹</string>
    <string name="review_tip">检视</string>
    <string name="switch_tip">切换</string>
    <string name="B_key_tip">B键</string>
    <string name="esc_key_tip">Esc键</string>
    <string name="sensor_to_mouse_move_num_speed_tip_str">每多少毫秒传输1次传感器数据: 5</string>
    <string name="auto_close_sensor_when_moving_shot_tip">移动射击时自动关闭陀螺仪</string>

</resources>