<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable_magnetic"
        android:text="@string/magnetic"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable_accelerator"
        android:text="@string/accelerator"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable_gravity"
        android:text="@string/gravity"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable_orientation"
        android:text="@string/orientation"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable_gyroscope"
        android:text="@string/gyroscope"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable_vibrator"
        android:text="@string/vibrator"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>