<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_show_or_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/sw_show_or_hide"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_set_idle_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_idle_time" />

        <Button
            android:id="@+id/btn_set_auto_recycle_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_auto_recycle_time" />

        <Button
            android:id="@+id/btn_get_auto_recycle_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_auto_recycle_time" />

        <Button
            android:text="@string/switch_background"
            android:id="@+id/btn_switch_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/switch_foreground"
            android:id="@+id/btn_switch_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_get_user_profile"
            android:text="@string/get_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_set_user_profile"
            android:text="@string/set_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>