<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_mute"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:text="@string/mute" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_volumeUp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/volume_up" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_volumeDown"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:text="@string/volume_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="@string/enable_send_audio"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start_send_audio"
            android:text="@string/start_send_audio"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp" />

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_stop_send_audio"
            android:text="@string/stop_send_audio"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/local_audio_playback_volume" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_local_audio_playback_volume"
            android:layout_width="@dimen/button_size_small"
            android:layout_height="wrap_content"
            android:text="get" />

        <SeekBar
            android:id="@+id/sb_local_audio_playback_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:min="0" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/remote_audio_playback_volume" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_remote_audio_playback_volume"
            android:layout_width="@dimen/button_size_small"
            android:layout_height="wrap_content"
            android:text="get" />

        <SeekBar
            android:id="@+id/sb_remote_audio_playback_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:min="0" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/local_audio_capture_volume" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_local_audio_capture_volume"
            android:layout_width="@dimen/button_size_small"
            android:layout_height="wrap_content"
            android:text="get" />

        <SeekBar
            android:id="@+id/sb_local_audio_capture_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:min="0" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/audio_playback_device" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="切换外放设备需确保音频上传处于开启的状态，否则切换无效"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/rg_audio_playback_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_headset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/headset" />

        <RadioButton
            android:id="@+id/rb_earpiece"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/earpiece" />

        <RadioButton
            android:id="@+id/rb_speakerphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speakerphone" />

        <RadioButton
            android:id="@+id/rb_bluetooth_headset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_headset" />
    </RadioGroup>

</LinearLayout>