<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_userId"
        android:hint="@string/player_user_id"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/group_choose_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player" />

        <RadioButton
            android:id="@+id/btn_viewer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewer" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_change_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send" />

    <TextView
        android:id="@+id/tv_current_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/btn_get_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_current_role" />

</LinearLayout>