<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_show_or_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/sw_show_or_hide"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/mute" />

        <Button
            android:id="@+id/btn_volume_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/volume_up" />

        <Button
            android:id="@+id/btn_volume_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/volume_down" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_send_audio"
            android:checked="true"
            android:text="@string/enable_send_audio"
            android:textColor="@color/teal_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_start_send_audio"
            android:text="@string/start_send_audio"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <Button
            android:id="@+id/btn_stop_send_audio"
            android:text="@string/stop_send_audio"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_get_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="查询配置" />

        <Button
            android:id="@+id/btn_change_audio_playback_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="切换音频播放设备" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>