<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_show_or_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/sw_show_or_hide"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_enable_mirror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_open_camera_mirror"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <FrameLayout
            android:id="@+id/fl_local_canvas"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp">
        </FrameLayout>

        <Button
            android:id="@+id/btn_add_local_canvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_local_canvas" />

        <Button
            android:id="@+id/btn_push_multiple_streams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_multiple_streams" />

        <Button
            android:id="@+id/btn_switch_rear_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_rear_camera" />

        <Button
            android:id="@+id/btn_switch_front_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_front_camera" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>