<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_show_or_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/sw_show_or_hide"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_enable_magnetic"
            android:textColor="@color/teal_700"
            android:text="@string/magnetic"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_enable_accelerator"
            android:textColor="@color/teal_700"
            android:text="@string/accelerator"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_enable_gravity"
            android:textColor="@color/teal_700"
            android:text="@string/gravity"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_enable_orientation"
            android:textColor="@color/teal_700"
            android:text="@string/orientation"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_enable_gyroscope"
            android:textColor="@color/teal_700"
            android:text="@string/gyroscope"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_enable_vibrator"
            android:textColor="@color/teal_700"
            android:text="@string/vibrator"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>