<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_show_or_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/sw_show_or_hide"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/et_userId"
            android:hint="@string/player_user_id"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/rg_choose_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:checked="true"
                android:text="@string/player" />

            <RadioButton
                android:id="@+id/rb_viewer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:text="@string/viewer" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_update_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_role" />

        <TextView
            android:id="@+id/tv_current_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/btn_get_current_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_current_role" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>